# python-automation-starter

./: README.md  env_loader.py—  main.py  pyproject.toml  retry.py
commands/: healthcheck.py
examples/: categorize_upi_statement.py  upi_reconcile.py
examples/examples/: gst_invoice.py
tests/: test_main.py
utils/: human_time.py  inr_money.py
